Major bug fix iframes not showing up
Also minor privacy policy changes that mention Substack's form

--- a/style.css
+++ b/style.css
@@ -346,7 +346,6 @@ iframe {
   width: 100%;
   height: 0;
   padding-bottom: 56.25%; /* 16:9 ratio */
-  display:none;
 }
 
 .responsive-iframe iframe {
